Fix misaligned button because of div width

--- a/app/assets/stylesheets/customOverrides/show_page.scss
+++ b/app/assets/stylesheets/customOverrides/show_page.scss
@@ -281,7 +281,7 @@ h2.yale-restricted-work-text {
     margin-left: 19%;
   }
 
-  #appliedParams {
+  .show-document #appliedParams {
     width: 130%;
   }
 }
